CHANGES: - Changed bg color to match Netflix's more - Fixed hovered carousel not showing the whole div - Added delay on the hover animation - Added details such as play button and movie name when hovered TODO: - Set home as active - Add genre maybe in addition to the details showing when hovered - Plays a trailer when hovered

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(15, 15, 15) !important;
+  background-color: #141414 !important;
   color: #000;
 }
 .carousel-container {
