--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -17,12 +17,16 @@
     width: 100%;
     height: 100%;
     background-image: linear-gradient(
-      rgba(15, 15, 15, 0) 0%,
-      rgba(15, 15, 15, 0) 70%,
-      rgba(15, 15, 15, 0.2) 80%,
-      rgba(15, 15, 15, 0.7) 90%,
-      rgba(15, 15, 15, 0.9) 95%,
-      rgba(15, 15, 15, 1) 100%
+      rgba(20, 20, 20, 1) 1%,
+      rgba(20, 20, 20, 0.5) 2%,
+
+      rgba(20, 20, 20, 0) 3%,
+
+      rgba(20, 20, 20, 0) 70%,
+      rgba(20, 20, 20, 0.2) 80%,
+      rgba(20, 20, 20, 0.7) 90%,
+      rgba(20, 20, 20, 0.9) 95%,
+      rgba(20, 20, 20, 1) 100%
     );
   }
 }
