--- a/src/components/CarouselList.css
+++ b/src/components/CarouselList.css
@@ -4,24 +4,8 @@
     "Lucida Sans", Arial, sans-serif;
   font-weight: 600;
   color: #fff;
-  margin: 0px 5px;
-}
-
-.card {
-  margin: 0px 4px;
-  border: none !important;
-  background-color: transparent !important;
-  box-shadow: none;
-}
-
-.card img {
-  border-radius: 4px;
-}
-
-.card img:hover {
-  transform: scale(1.25);
-  z-index: 1;
-  border-radius: 8px;
+  margin: -25px 5px;
+  z-index: -1;
 }
 
 .carousel-control-prev,
@@ -30,22 +14,131 @@
   z-index: 10 !important;
 }
 
-.carousel-inner {
-  margin-bottom: 15px;
-  padding: 20px 0px 30px 0px;
-  overflow: visible;
-}
-
 .carousel-indicators {
   height: 100%;
   margin: 0 !important;
   left: auto !important;
   bottom: auto !important;
-  margin-right: 15px !important;
+  margin-right: 25px !important;
 }
 
 .carousel-indicators button {
   height: 2px !important;
   width: 15px !important;
   margin: 0px 1px !important;
+}
+
+.carousel-inner {
+  margin-bottom: 15px;
+  padding: 40px 0px 30px 0px;
+  overflow: visible !important;
+}
+
+.hstack .card {
+  width: 16% !important;
+}
+.card {
+  margin: 0px 4px;
+  border: none !important;
+  background-color: transparent !important;
+  box-shadow: none;
+}
+
+.movie-img {
+  cursor: pointer;
+  object-fit: cover;
+
+  transition-duration: 1ms;
+
+  border-radius: 0.375rem;
+  box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
+    0 8px 10px -6px rgb(0 0 0 / 0.1);
+
+  width: 100%;
+}
+.movie-img:hover {
+  opacity: 0;
+}
+
+.hoverable-card {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+
+  transition-duration: 200ms;
+  transition-delay: 500ms;
+  z-index: 8;
+  visibility: visible;
+  width: 100%;
+}
+.hoverable-card:hover {
+  translate: 0px -25px;
+  scale: 1.15;
+  opacity: 100%;
+}
+.hoverable-img {
+  cursor: pointer;
+  object-fit: contain;
+  transition: 150ms;
+  box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
+    0 8px 10px -6px rgb(0 0 0 / 0.1);
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
+  width: 100%;
+}
+.card-details-box {
+  z-index: 10;
+  background-color: #1c1c1c;
+  padding: 5px 40px;
+  position: absolute;
+  width: 100%;
+  transition: all;
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  border-bottom-right-radius: 0.375rem; /* 6px */
+  border-bottom-left-radius: 0.375rem; /* 6px */
+}
+.card-details-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+.card-play {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  background: #fff;
+  border-radius: 9999px;
+  margin: 5px 0;
+}
+.card-button {
+  display: flex;
+  vertical-align: middle;
+  background-color: #fff;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  border-radius: 9999px;
+  border: 0px solid transparent;
+  padding-right: 1px;
+}
+
+.card-name {
+  display: flex;
+  justify-content: center;
+
+  align-items: center;
+  color: #fff;
+  font-weight: bold;
+  margin: 0;
+}
+
+.card-genre {
+  display: block;
+  width: 100%;
 }
