--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -1,8 +1,9 @@
 .navbar {
   padding: 4px 10px !important;
+  transition: 500ms;
 }
 .navbar-bg {
-  background-color: rgba(15, 15, 15, 1);
+  background-color: #141414;
 }
 
 .logo {
